# VulkanWCmake

./: .gitignore  CMakeLists.txt  KovalskiyEngineMain.cpp  README.md
app/: CMakeLists.txt
app/include/: keApp.h
app/src/: keApp.cpp
cmake/: deps.cmake
common/: CMakeLists.txt
common/include/: keDefines.h  keUtils.h
engine/: CMakeLists.txt
engine/ke_VkDescriptorSetLayout/: CMakeLists.txt
engine/ke_VkDescriptorSetLayout/include/: keVkDescriptorSetLayout.h
engine/ke_VkDescriptorSetLayout/src/: keVkDescriptorSetLayout.cpp
engine/ke_VkDeviceManager/: CMakeLists.txt
engine/ke_VkDeviceManager/include/: keVkDevice.h  keVkDeviceManager.h
engine/ke_VkDeviceManager/src/: keVkDevice.cpp  keVkDeviceManager.cpp
engine/ke_VkGraphicsPipeline/: CMakeLists.txt
engine/ke_VkGraphicsPipeline/include/: keVkGraphicsPipeline.h
engine/ke_VkGraphicsPipeline/src/: keVkGraphicsPipeline.cpp
engine/ke_VkRenderPass/: CMakeLists.txt
engine/ke_VkRenderPass/include/: keVkRenderPass.h
engine/ke_VkRenderPass/src/: keVkRenderPass.cpp
engine/ke_core/: CMakeLists.txt
engine/ke_core/include/: keWindow.h
engine/ke_core/src/: keWindow.cpp
shaders/: compile.bat
